--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -3,23 +3,37 @@
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 0px;
   cursor: pointer;
-  border: 3px black solid;
+  border: 3px #231e52 solid;
   margin: 10px 20px 10px;
   border-radius: 10px;
+  padding: 0;
+}
+.headerAccordion {
+  padding-left: 20px;
 }
 .specContainer {
   position: relative;
   display: inline-block;
   width: 100%;
 }
+.rightDiv {
+  border-left: 3px #231e52 solid;
+}
 .specHeader {
   display: inline-block;
+  padding-left: 20px;
 }
 .arrowIcon {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  top: 0;
+  right: 0px;
   display: inline-block;
-  width: 60px;
+  width: auto;
+  height: 100%;
   background-color: red;
+  border-radius: 0px 5px 5px 0px;
+}
+.infoAccordion {
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
