--- a/src/components/NavBar/NavBar.styles.css
+++ b/src/components/NavBar/NavBar.styles.css
@@ -16,6 +16,7 @@
   padding: 10px 20px 20px 5px;
   background-color: aliceblue;
   border-radius: 5px;
+  z-index: 99;
 }
 .navBarDropdown ul {
   padding: 0px 20px 10px 5px;
