--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -1,13 +1,11 @@
 .accordion-item {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 0px;
   cursor: pointer;
   border: 3px #231e52 solid;
   margin: 10px 20px 10px;
   border-radius: 10px;
-  padding: 0;
+  position: relative;
 }
+
 .headerAccordion {
   padding-left: 20px;
 }
@@ -24,14 +22,13 @@
   padding-left: 20px;
 }
 .arrowIcon {
-  position: absolute;
-  top: 0;
-  right: 0px;
-  display: inline-block;
   width: auto;
   height: 100%;
   background-color: red;
   border-radius: 0px 5px 5px 0px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 .infoAccordion {
   padding-left: 20px;
