Draft 1 Complete-ish

--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -10,9 +10,7 @@
   padding-left: 20px;
 }
 .specContainer {
-  position: relative;
-  display: inline-block;
-  width: 100%;
+  border-right: solid;
 }
 .rightDiv {
   border-left: 3px #231e52 solid;
@@ -33,4 +31,25 @@
 .infoAccordion {
   padding-left: 20px;
   padding-bottom: 20px;
+}
+.accordionDivide {
+  border-top: solid #231e52 3px;
+  margin: 0px 40px 0px;
+}
+.accordionBtnContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 5px;
+  text-align: center;
+}
+.containerInfoSection {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  margin: 10px 0 10px;
+}
+.goldenTomAccordion {
+  text-align: center;
+}
+.goldenTomAccordion p {
+  font-size: 3em;
 }
