--- a/src/components/Rankings/Rankings.styles.css
+++ b/src/components/Rankings/Rankings.styles.css
@@ -1,6 +1,40 @@
 .rankingContainer {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-column-gap: 0px;
+  grid-column-gap: 15px;
   grid-row-gap: 0px;
+  border: 4px solid #231e52;
+  border-radius: 10px;
+  padding: 20px 30px 20px;
+  margin: 20px 30px 20px;
+}
+.cityContainerNL {
+  border-right: #231e52 solid 3px;
+}
+.cityContainer h1 {
+  text-align: center;
+  color: #ed3526;
+}
+@media only screen and (max-width: 900px) {
+  .rankingContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    border: 4px solid #231e52;
+    border-radius: 10px;
+    padding: 20px 30px 20px;
+    margin: 20px 30px 20px;
+  }
+  .cityContainerNL {
+    border-bottom: #231e52 solid 3px;
+    border-right: none;
+  }
+}
+.rankingRestCon {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+}
+.rankingRestCon p {
+  font-size: 1.5em;
 }
