--- a/src/components/RestSection/RestSection.styles.css
+++ b/src/components/RestSection/RestSection.styles.css
@@ -3,3 +3,10 @@
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 5px;
 }
+@media only screen and (max-width: 900px) {
+  .restContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 5px;
+  }
+}
