--- a/src/components/Rankings/Rankings.styles.css
+++ b/src/components/Rankings/Rankings.styles.css
@@ -23,8 +23,8 @@
     grid-row-gap: 0px;
     border: 4px solid #231e52;
     border-radius: 10px;
-    padding: 20px 30px 20px;
-    margin: 20px 30px 20px;
+    padding: 20px 10px 20px;
+    margin: 20px 0px 20px;
   }
   .cityContainerNL {
     border-bottom: #231e52 solid 3px;
@@ -34,7 +34,14 @@
 .rankingRestCon {
   display: grid;
   grid-template-columns: 4fr 1fr;
+  margin-right: 10px;
 }
 .rankingRestCon p {
   font-size: 1.5em;
+}
+.rankVotes {
+  text-align: end;
+}
+.rankingHeader {
+  text-align: center;
 }
