--- a/src/components/Voting/Voting.styles.css
+++ b/src/components/Voting/Voting.styles.css
@@ -33,3 +33,16 @@
   background-color: white;
   color: #ed3526;
 }
+@media only screen and (max-width: 900px) {
+  .goldTomInput {
+    width: 90%;
+  }
+  .restGTContainer {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    border: solid black 3px;
+    border-radius: 10px;
+    margin: 10px 0px 10px;
+    padding: 0px 0px 0px 20px;
+  }
+}
