added Gold Tom to Rankings

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,9 @@
   src: local("ArcherProIta"),
     url(./assets/fonts/ArcherPro-SemiboldIta.otf) format("opentype");
 }
-
+img {
+  max-width: 100%;
+}
 a {
   font-family: "ArcherProIta";
   text-decoration: none;
