--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -24,7 +24,7 @@
 .arrowIcon {
   width: 20%;
   height: 100%;
-  background-color: red;
+  background-color: #d8282f;
   border-radius: 0px 5px 5px 0px;
   position: absolute;
   right: 0;
