--- a/src/components/ThankYou/ThankYou.styles.css
+++ b/src/components/ThankYou/ThankYou.styles.css
@@ -2,7 +2,7 @@
   font-family: "Lian";
   font-size: 5em;
   text-align: center;
-  color: #ed3526;
+  color: #d8282f;
   font-weight: 400;
   line-height: 1;
 }
