--- a/src/components/Voting/Voting.styles.css
+++ b/src/components/Voting/Voting.styles.css
@@ -21,9 +21,9 @@
 }
 .restGTBtn {
   font-family: "DukesTS";
-  border: solid 2px #ed3526;
+  border: solid 2px #d8282f;
   padding: 10px 0 10px;
-  background-color: #ed3526;
+  background-color: #d8282f;
   color: white;
   font-size: 2em;
   cursor: pointer;
@@ -31,7 +31,7 @@
 }
 .restGTBtn:hover {
   background-color: white;
-  color: #ed3526;
+  color: #d8282f;
 }
 @media only screen and (max-width: 900px) {
   .goldTomInput {
