--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
 img {
   max-width: 100%;
 }
+@font-face {
+  font-family: "DukesTS";
+  src: local("DukesTS"),
+    url(./assets/fonts/Tungsten-Semibold.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "ArcherPro";
+  src: local("ArcherPro"),
+    url(./assets/fonts/ArcherPro-Semibold.otf) format("opentype");
+}
+@font-face {
+  font-family: "ArcherProIta";
+  src: local("ArcherProIta"),
+    url(./assets/fonts/ArcherPro-SemiboldIta.otf) format("opentype");
+}
+h1 {
+  font-family: "DukesTS";
+  font-size: 3em;
+}
+h2 {
+  font-family: "DukesTS";
+  font-size: 2em;
+}
+h3 {
+  font-family: "DukesTS";
+  font-size: 1.3em;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "ArcherPro";
+}
