--- a/src/components/Footer/Footer.styles.css
+++ b/src/components/Footer/Footer.styles.css
@@ -1,12 +1,10 @@
 .footerDiv {
+  display: block;
   background-color: #feb81c;
   height: 100px;
-  position: relative;
-  bottom: 0;
 }
 .ppLink {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
+  width: 100vw;
+  text-align: end;
   cursor: pointer;
 }
