--- a/src/pages/GoldenTomato/GoldenTomato.styles.css
+++ b/src/pages/GoldenTomato/GoldenTomato.styles.css
@@ -22,6 +22,26 @@
   background-color: white;
   color: #d8282f;
 }
+.votingComingSoonHeader {
+  font-family: "Lian";
+  font-size: 5em;
+  text-align: center;
+  color: #d8282f;
+  font-weight: 400;
+  line-height: 1;
+}
+.goldTomCS {
+  display: block;
+  margin: 0 auto 0;
+  width: 60%;
+}
+.VCSsecLine {
+  font-size: 2em;
+  text-align: center;
+  font-family: "DukesTS";
+  line-height: 0;
+}
+
 @media only screen and (max-width: 900px) {
   .gtContainer {
     padding: 10px;
