--- a/src/components/Rankings/Rankings.styles.css
+++ b/src/components/Rankings/Rankings.styles.css
@@ -27,6 +27,22 @@
   text-align: center;
   color: #d8282f;
 }
+.rankingRestCon {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  margin-right: 10px;
+  border-bottom: #231e52 2px solid;
+  height: 150px;
+}
+.rankingRestCon p {
+  font-size: 1.5em;
+}
+.rankVotes {
+  text-align: end;
+}
+.rankingHeader {
+  text-align: center;
+}
 @media only screen and (max-width: 900px) {
   .rankingContainer {
     display: grid;
@@ -37,6 +53,9 @@
     border-radius: 10px;
     padding: 20px 10px 20px;
     margin: 20px 0px 20px;
+  }
+  .rankingRestCon {
+    padding: 10px 20px 0;
   }
   .cityContainerNL {
     border-bottom: #231e52 solid 3px;
@@ -49,18 +68,4 @@
     left: 10%;
     width: 80%;
   }
-}
-.rankingRestCon {
-  display: grid;
-  grid-template-columns: 4fr 1fr;
-  margin-right: 10px;
-}
-.rankingRestCon p {
-  font-size: 1.5em;
-}
-.rankVotes {
-  text-align: end;
-}
-.rankingHeader {
-  text-align: center;
 }
