--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -4,6 +4,8 @@
   margin: 10px 20px 10px;
   border-radius: 10px;
   position: relative;
+  width: 100%;
+  text-align: start     ;
 }
 .headerContainer {
   width: 75%;
