--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -7,6 +7,10 @@
   width: 95%;
   text-align: start;
 }
+.voteBtn {
+  font-family: "ArcherPro";
+  font-size: 1em;
+}
 .headerContainer {
   width: 75%;
 }
