--- a/src/App.css
+++ b/src/App.css
@@ -64,12 +64,12 @@ body {
   background-color: white;
 }
 .headerTY {
-  font-family: "Lian";
-  font-size: 5em;
+  font-family: "DukesTS";
+  font-size: 4em;
   text-align: center;
   color: #d8282f;
   font-weight: 400;
-  line-height: 1;
+  line-height: 0.8;
 }
 main {
   margin-bottom: 10px;
