--- a/src/components/Footer/Footer.styles.css
+++ b/src/components/Footer/Footer.styles.css
@@ -1,10 +1,12 @@
 .footerDiv {
   display: block;
+  position: relative;
   background-color: #feb81c;
   height: 100px;
 }
 .ppLink {
-  width: 100vw;
-  text-align: end;
   cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 5px;
 }
