--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -18,9 +18,6 @@
 .headerAccordion {
   padding-left: 20px;
 }
-.specContainer {
-  border-right: solid 2px #231e52;
-}
 
 .specHeader {
   display: inline-block;
@@ -35,7 +32,16 @@
   right: 0;
   bottom: 0;
 }
-
+.arrowUpIcon {
+  width: 20%;
+  height: 100%;
+  background-color: #231e52;
+  color: white;
+  border-radius: 0px 5px 5px 0px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
 .accordionDivide {
   padding: 0px 30px 10px;
 
@@ -49,7 +55,7 @@
 }
 .containerInfoSection {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr;
   margin: 0px 0 0px;
 }
 .goldenTomAccordion {
