--- a/src/pages/GoldenTomato/GoldenTomato.styles.css
+++ b/src/pages/GoldenTomato/GoldenTomato.styles.css
@@ -40,6 +40,15 @@
   text-align: center;
   font-family: "DukesTS";
 }
+.gifContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 20px 0;
+}
+.gifItem {
+  display: block;
+  margin: 0 auto 0;
+}
 
 @media only screen and (max-width: 900px) {
   .gtContainer {
