--- a/src/pages/GoldenTomato/GoldenTomato.styles.css
+++ b/src/pages/GoldenTomato/GoldenTomato.styles.css
@@ -30,11 +30,7 @@
   font-weight: 400;
   line-height: 1;
 }
-.goldTomCS {
-  display: block;
-  margin: 0 auto 0;
-  width: 60%;
-}
+
 .VCSsecLine {
   font-size: 2em;
   text-align: center;
@@ -42,16 +38,65 @@
 }
 .gifContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   padding: 0 20px 0;
 }
 .gifItem {
   display: block;
   margin: 0 auto 0;
 }
-
+.goldTomGrid {
+  width: 70%;
+  display: block;
+  margin: 0 auto 0;
+}
+.ladyMobile {
+  display: none;
+}
+.topGridGTCS {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px 40px 20px;
+  border: 2px #231e52 solid;
+  border-radius: 10px;
+  margin: 20px 20px 20px;
+}
+.goldTomCS {
+  width: 60%;
+  display: block;
+  margin: 0 auto 0;
+}
+.textItemTG {
+  padding: 30px 0 0;
+}
 @media only screen and (max-width: 900px) {
   .gtContainer {
     padding: 10px;
+  }
+  .gifContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 20px 0;
+  }
+  .goldTomGrid {
+    display: none;
+  }
+  .goldTomCS {
+    display: block;
+    margin: 0 auto 0;
+    width: 60%;
+  }
+  .ladyMobile {
+    display: block;
+    width: 75%;
+    margin: 0 auto 0;
+  }
+  .topGridGTCS {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 20px 5px 20px;
+    border: 3px #231e52 solid;
+    border-radius: 10px;
+    margin: 20px 5px 20px;
   }
 }
