--- a/src/pages/Restaurants/Restaurants.styles.css
+++ b/src/pages/Restaurants/Restaurants.styles.css
@@ -49,3 +49,17 @@
   margin: 20px 10px 20px;
   padding: 20px 0 20px;
 }
+.restTomInput {
+  border: black solid 2px;
+  margin: 0 auto 0;
+  display: block;
+  font-size: 1.3em;
+  width: 60%;
+  padding: 10px 20px 10px;
+  border-radius: 10px;
+}
+@media only screen and (max-width: 900px) {
+  .restTomInput {
+    width: 80%;
+  }
+}
