th fixed on coming soon section to match top of home

--- a/src/components/GoldTomCS/GoldTomCS.styles.css
+++ b/src/components/GoldTomCS/GoldTomCS.styles.css
@@ -14,6 +14,7 @@
 }
 .ballotBox {
   padding-top: 70px;
+  
 }
 .textSecGTCS {
   padding: 10% 0 0;
@@ -34,7 +35,7 @@
   line-height: 0;
 }
 
-.gifCS img {
+.twoGifs {
   display: block;
   margin: 0 auto 0;
 }
