--- a/src/pages/GoldenTomato/GoldenTomato.styles.css
+++ b/src/pages/GoldenTomato/GoldenTomato.styles.css
@@ -28,13 +28,26 @@
   text-align: center;
   color: #d8282f;
   font-weight: 400;
-  line-height: 1;
+  line-height: 0.2;
 }
 
 .VCSsecLine {
-  font-size: 2em;
+  font-size: 3em;
   text-align: center;
+  font-family: "DukesTNarrow";
+  color: #231e52;
+  line-height: 0.3;
+}
+.VCSsecLine span {
+  text-decoration: underline;
+  margin-left: 10px;
+}
+.comeBack2Vote {
   font-family: "DukesTS";
+  text-align: center;
+  color: #231e52;
+  font-size: 1.6em;
+  line-height: 0.5;
 }
 .gifContainer {
   display: grid;
@@ -56,7 +69,7 @@
 .topGridGTCS {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 20px 40px 20px;
+  padding: 0px 40px 0px;
   border: 2px #231e52 solid;
   border-radius: 10px;
   margin: 20px 20px 20px;
@@ -94,7 +107,7 @@
   .topGridGTCS {
     display: grid;
     grid-template-columns: 1fr;
-    padding: 20px 5px 20px;
+    padding: 20px 5px 0px;
     border: 3px #231e52 solid;
     border-radius: 10px;
     margin: 20px 5px 20px;
