--- a/src/pages/Home/Home.styles.css
+++ b/src/pages/Home/Home.styles.css
@@ -19,13 +19,25 @@
   padding: 10px 50px 10px;
   margin: 0 100px 0;
 }
-.textContainerHomePage h3 {
-  font-size: 2em;
+.textContainerHomePage h1 {
+  font-size: 3em;
+  font-weight: 800;
+  color: #231e52;
   font-family: "DukesTS";
+  line-height: 0;
+}
+.textContainerHomePage h2 {
+  font-size: 2em;
+  color: #231e52;
 }
 .textContainerHomePage p {
   font-size: 1.6em;
   font-family: "DukesTS";
+  color: #231e52;
+  line-height: 0.2;
+}
+.cityContainer {
+  margin-bottom: 40px;
 }
 .textSpan {
   font-size: 1.2em;
@@ -75,5 +87,8 @@
     text-align: center;
     padding: 10px 0px 10px;
     margin: 0 10px 0;
+  }
+  .textContainerHomePage h1 {
+    font-size: 2.5em;
   }
 }
