--- a/src/pages/GoldenTomato/GoldenTomato.styles.css
+++ b/src/pages/GoldenTomato/GoldenTomato.styles.css
@@ -120,7 +120,19 @@
     text-align: center;
     line-height: 0.9;
   }
-  .gtWords {
-    line-height: 0.9;
+  .votingComingSoonHeader {
+    font-family: "Lian";
+    font-size: 4em;
+    text-align: center;
+    color: #d8282f;
+    font-weight: 400;
+    line-height: 0.2;
+  }
+  .VCSsecLine {
+    font-size: 2.5em;
+    text-align: center;
+    font-family: "DukesTNarrow";
+    color: #231e52;
+    line-height: 0.3;
   }
 }
