--- a/src/components/ThankYou/ThankYou.styles.css
+++ b/src/components/ThankYou/ThankYou.styles.css
@@ -1,6 +1,9 @@
 .secLineTY {
   font-size: 2em;
   text-align: center;
-  font-family: "DukesTS";
+  font-family: "DukesTNarrow";
   line-height: 0;
+}
+.headerTY {
+  font-family: "DukesTS";
 }
