--- a/src/components/Rankings/Rankings.styles.css
+++ b/src/components/Rankings/Rankings.styles.css
@@ -82,7 +82,7 @@
   background-color: #231e52;
   height: 40px;
   width: 100%;
-  border-radius: 0 8px 0 0;
+  border-radius: 0 8px 8px 0;
   cursor: pointer;
 }
 .textDDContainer {
