closing voting on 28th at 11:59

--- a/src/components/Accordion/Accordion.styles.css
+++ b/src/components/Accordion/Accordion.styles.css
@@ -14,7 +14,9 @@
 .headerAccordion {
   padding-left: 20px;
 }
-
+.votingCenter {
+  text-align: center;
+}
 .specHeader {
   display: inline-block;
   padding-left: 20px;
