--- a/src/components/Rankings/Rankings.styles.css
+++ b/src/components/Rankings/Rankings.styles.css
@@ -111,6 +111,15 @@
 .numDisplayOpen {
   cursor: pointer;
 }
+.tallyingResults {
+  text-align: center;
+}
+.tallyingResults h1 {
+  font-size: 4em;
+}
+.tallyingResults h2 {
+  font-size: 3em;
+}
 @media only screen and (max-width: 900px) {
   .rankingContainerGrid {
     display: grid;
