--- a/src/components/Rankings/Rankings.styles.css
+++ b/src/components/Rankings/Rankings.styles.css
@@ -31,17 +31,19 @@
 .cityContainer h1 {
   text-align: center;
   color: #d8282f;
-  font-size: 2.5em;
+  font-size: 4em;
   font-family: "DukesTNarrow";
 }
 .rankingRestCon {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 0 20% 0;
-  border-top: #231e52 1px solid;
-  height: 100px;
   margin-bottom: 5px;
   margin-right: 5px;
+}
+.winnerText {
+  font-size: 2em;
+  font-family: "DukesTNarrow";
 }
 .rankingRestCon p {
   font-size: 2em;
@@ -57,7 +59,7 @@
 
 .dropDownContainer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1fr);
   grid-column-gap: 5px;
   padding: 0 10px 0;
   margin-top: 10px;
@@ -95,7 +97,7 @@
 .instructText {
   text-align: center;
   color: #231e52;
-  font-size: 0.8em;
+  font-size: 0.6em;
 }
 .dropDownOpened {
   position: relative;
@@ -145,7 +147,7 @@
     color: white;
     text-align: center;
     font-family: "DukesTNarrow";
-    font-size: 1.8em;
+    font-size: 2.4em;
     padding: 0;
   }
   .goldTom {
